syntax = "proto3";

package proto.domjudge;
option java_package = "org.domjudge.proto";
option java_outer_classname = "DomjudgeProto";

import "annotations.proto";

message Affiliation {
  uint64 id = 1 [(serialized_name) = "affilid"];
  string shortname = 2;
  string name = 3;
  string country = 4;
}

message Category {
  uint64 id = 1 [(serialized_name) = "categoryid"];
  string name = 2;
  string color = 3;
  uint64 sort_order = 4 [(serialized_name) = "sortorder"];
}

message Clarification {
  uint64 id = 1 [(serialized_name) = "clarid"];
  sint64 submit_time = 2 [(serialized_name) = "submittime"];
  uint64 probid = 3;
  string body = 4;
}

message Contest {
  uint64 id = 1;
  string short_name = 2 [(serialized_name) = "shortname"];
  string name = 3;
  sint64 start = 4; // timestamp
  sint64 freeze = 5; // timestamp
  sint64 end = 6; // timestamp
  uint64 length = 7; // timediff
  sint64 unfreeze = 8; // timestamp
  uint64 penalty = 9;
}

message Submission {
  uint64 id = 1;
  uint64 team = 2;
  uint64 problem = 3;
  string language = 4;
  double time = 5; // timestamp
}

message Judging {
  uint64 id = 1;
  uint64 submission = 2;
  string outcome = 3;
  double time = 4; // timestamp
}

message JudgementType {
  sint64 id = 1;
  string label = 2;
  string name = 3;
  bool penalty = 4;
  bool solved = 5;
}

message Language {
  string id = 1;
  repeated string file_extensions = 2 [(serialized_name) = "extensions"];
  bool allow_judge = 3;
  double time_factor = 4;
}

message Problem {
  uint64 id = 1;
  string label = 2;
  string short_name = 3 [(serialized_name) = "shortname"];
  string name = 4;
  string color = 5;
}

message ScoreboardRow {
  uint64 rank = 1;
  uint64 team = 2;
  ScoreboardScore score = 3;
  repeated ScoreboardProblem problems = 4;
}

message ScoreboardScore {
  uint64 num_solved = 1;
  uint64 total_time = 2;
}

message ScoreboardProblem {
  string label = 1;
  uint64 num_judged = 2;
  uint64 num_pending = 3;
  bool solved = 4;
  sint64 time = 5;
}

message Team {
  sint64 id = 1;
  string name = 2;
  string members = 3;
  string nationality = 4;
  uint64 category = 5;
  string group_name = 6 [(serialized_name) = "group"];
  sint64 affil_id = 7 [(serialized_name) = "affilId"];
  string affiliation = 8;
}

message User {
  sint64 id = 1;
  sint64 team_id = 2 [(serialized_name) = "teamid"];
  string email = 3;
  string ip = 4;
  string last_ip = 5 [(serialized_name) = "lastip"];
  string name = 6;
  string username = 7;

  enum Role {
    user = 0;
    team = 1;
    balloon = 2;
    judgehost = 3;
    event_reader = 4;
    full_event_reader = 5;
    jury = 6;
    admin = 7;
  }
  repeated Role roles = 8;
}

message EntireContest {
  repeated Affiliation affiliations = 1;
  repeated Category categories = 2;
  repeated Clarification clarifications = 3;
  // Config config = 4;
  Contest contest = 5;
  repeated Contest contests = 6;
  repeated JudgementType judgement_types = 7;
  repeated Judging judgings = 8;
  repeated Problem problems = 9;
  repeated ScoreboardRow scoreboard = 10;
  repeated Submission submissions = 11;
  repeated Team teams = 12;
  repeated Language languages = 13;
}
